--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,29 +8,26 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: debian:trixie
     
     steps:
       - uses: actions/checkout@v3
       
-      - name: Build packages
+      - name: Build
         run: |
-          apt update
-          mkdir -p pool/main
-          for recipe in recipes/*.yml; do
-            bash build-recipe.sh "$recipe"
-          done
+          docker run -v $PWD:/work -w /work debian:trixie bash -c '
+            apt update
+            mkdir -p pool/main
+            for recipe in recipes/*.yml; do
+              bash build-package.sh "$recipe"
+            done
+            apt install -y dpkg-dev
+            mkdir -p dists/stable/main/binary-amd64
+            cd dists/stable/main/binary-amd64
+            dpkg-scanpackages ../../../../pool/main /dev/null > Packages
+            gzip -k Packages
+          '
       
-      - name: Generate repo
-        run: |
-          apt install -y dpkg-dev
-          mkdir -p dists/stable/main/binary-amd64
-          cd dists/stable/main/binary-amd64
-          dpkg-scanpackages ../../../../pool/main /dev/null > Packages
-          gzip -k Packages
-      
-      - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
+      - uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./
