Change script call from build-package to build-recipe

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
             apt update
             mkdir -p pool/main
             for recipe in recipes/*.yml; do
-              bash build-package.sh "$recipe"
+              bash build-recipe.sh "$recipe"
             done
             apt install -y dpkg-dev
             mkdir -p dists/stable/main/binary-amd64
